Added Version Tracking

--- a/app.html
+++ b/app.html
@@ -10,6 +10,7 @@
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-35695570-1']);
       _gaq.push(['_trackPageview']);
+      _gaq.push(['_setCustomVar', 1, 'Version', '1.1.3', 2]);
 
       (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
